@@ -1,3 +1,10 @@
+2022-06-01T16:14:15Z:
+* notice: last 14d: unq all: 1 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 16 371 / 22 392
+* notice: next accum: outdated-unq outdated-all / unq all: 16 371 / 22 385
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -7 / +1 +14 -0 -13 / 1 1
+* notice: removed / changed dates: [] / [2022-05-18]
+
 2022-06-01T08:15:42Z:
 * notice: last 14d: unq all: 1 21
 * notice: prev accum: outdated-unq outdated-all / unq all: 16 371 / 22 398
